--- a/package.json
+++ b/package.json
@@ -6,19 +6,32 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "npm run lint:js",
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "devDependencies": {
     "@nuxt/content": "^2.6.0",
+    "@nuxt/eslint-config": "^0.1.1",
     "@nuxtjs/tailwindcss": "^6.6.7",
     "@types/node": "^18",
     "@vueuse/nuxt": "^10.1.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-nuxt": "^1.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-vue": "^9.11.0",
     "nuxt": "^3.4.2",
     "nuxt-icons": "^3.2.1",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2"
+  },
+  "dependencies": {
+    "vue": "^3.2.47"
   }
 }
