--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
     "@nuxt/content": "^2.6.0",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxtjs/tailwindcss": "^6.6.7",
     "@types/node": "^18",
     "@vueuse/nuxt": "^10.1.0",
     "autoprefixer": "^10.4.14",
+    "cz-customizable": "^7.0.0",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-nuxt": "^1.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.11.0",
+    "husky": "^8.0.3",
     "nuxt": "^3.4.2",
     "nuxt-icons": "^3.2.1",
     "postcss": "^8.4.23",
@@ -33,5 +36,18 @@
   },
   "dependencies": {
     "vue": "^3.2.47"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": "./commitizen.js"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS -g './commitlint.js'"
+    }
   }
 }
